--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,80 +1,62 @@
+* {
+    box-sizing: border-box;
+}
 
 body {
-    background-color: #ffffff;
+    font-family: "Times New Roman";
+    margin: 0
 }
 
 header {
-    padding: 5px;
-    font-family: 'Times New Roman', Arial, sans-serif;
-    background-color: #2b395f;
-    color: #ffffff;
+    padding: 40px;
+    text-align: center;
+    background: rgb(85, 0, 0);
+    color: black;
 }
 
-header h1 {
-    display: inline-block;
-    font-size: 48px;
+nav {
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    background: rgb(255, 255, 255);
+
 }
 
-
-header nav {
-    padding-top: 25px;
-    margin-right: 20px;
-    float: right;
-    font-family: 'Times New Roman','Arial', sans-serif;
-    font-size: 20px;
-}
-
-header nav ul {
-    list-style-type: none;
-}
-
-header nav ul li {
-    display: inline-block;
-    margin-left: 25px;
-}
-
-a {
-    color: rgb(255, 255, 255);
+nav a {
+    color:rgb(0, 0, 0);
+    padding: 14px, 20px;
     text-decoration: none;
-}
-
-p {
-    font-size: 16px;
+    text-align: center;
 }
 
 .tech {
     height: 150px;
     width: 100%;
-    margin-bottom: 25px;
+    margin-bottom: 0px;
     background-image: url("../images/tech.jpg");
     background-size: auto;
     background-position: center;
 }
 
-.float-left {
-    float: left;
-    margin-right: 25px;
+main {
+  display: column;
+  background: rgb(192, 192, 189);
 }
+
 
 .float-right {
     float: right;
     margin-right: 25px;
 }
 
-.content {
-    width: 75%;
-    display: inline-block;
-    margin-left: 20px;
-}
-
-
 .about-me, .my-work, .contact-me {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
     font-family: 'Times New Roman', 'Arial', 'sans-serif';
-    background-color: #992424;
-    color: rgb(39, 80, 168);
+    color: rgb(0, 0, 0);
+    background-color:rgb(73, 73, 73);
 }
 
 .about-me img, .my-work img, .contact-me img  {
@@ -84,6 +66,14 @@ p {
 .about-me h2, .my-work h2, .contact-me h2 {
     margin-bottom: 20px;
     font-size: 36px;
+    text-align: left;
+
+}
+
+.contact-me a {
+    text-decoration: none;
+    color:black
+
 }
 
 
