--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,26 +8,26 @@ body {
 }
 
 header {
-    padding: 40px;
-    text-align: center;
-    background: rgb(85, 0, 0);
+    padding: 5px;
+    text-align: Left;
+    background: rgb(48, 110, 129);
     color: black;
 }
 
 nav {
     display: flex;
     justify-content: space-evenly;
-    margin-top: 20px;
+    margin-top: 5px;
     margin-bottom: 20px;
-    background: rgb(255, 255, 255);
-
+    text-align: right;
+    
 }
 
 nav a {
     color:rgb(0, 0, 0);
     padding: 14px, 20px;
     text-decoration: none;
-    text-align: center;
+    text-align: right;
 }
 
 .tech {
@@ -41,7 +41,11 @@ nav a {
 
 main {
   display: column;
-  background: rgb(192, 192, 189);
+  background-color:rgb(255, 255, 255);
+}
+
+h2 {
+    text-align: left;
 }
 
 
@@ -54,9 +58,9 @@ main {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    font-family: 'Times New Roman', 'Arial', 'sans-serif';
-    color: rgb(0, 0, 0);
-    background-color:rgb(73, 73, 73);
+    font-family: 'Times New Roman';
+    color: rgb(48, 110, 129);
+    background-color:rgb(255, 255, 255);
 }
 
 .about-me img, .my-work img, .contact-me img  {
